force-app/main/default/objects/SBQQ__CustomScript__c/SBQQ__CustomScript__c.object-meta.xml
<CustomObject>
    <description>Script that can be executed by an outside resource</description>
    <label>Custom Script</label>
    <nameField>
        <label>Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>