force-app/main/default/objects/SBQQ__CustomScript__c/fields/SBQQ__GroupFields__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GroupFields__c</fullName>
        <description>Fields on the QuoteLineGroup__c object referenced by this plugin</description>
        <inlineHelpText>Enter the API names of any Quote Line Group fields referenced by this plugin, one per line.</inlineHelpText>
        <label>Quote Line Group Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>