force-app/main/default/objects/SBQQ__CustomScript__c/fields/SBQQ__TranspiledCode__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TranspiledCode__c</fullName>
        <description>Script Code transpiled to ES5</description>
        <label>Transpiled Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>